<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/soal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1."
                android:textColor="@color/black100"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/num1"
                android:textColor="@color/black100"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ans1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/soal1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" />

            <EditText
                android:id="@+id/answer1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:inputType="text" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num1"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/soal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="2."
                android:textColor="@color/black100"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/num2"
                android:textColor="@color/black100"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ans2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/soal2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/answer2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans2_1"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/answer2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans2_2"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/answer2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans2_3"
                    android:textSize="15sp" />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/num3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num2"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/soal3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="3."
                android:textColor="@color/black100"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/num3"
                android:textColor="@color/black100"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ans3_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/soal3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" />

            <CheckBox
                android:id="@+id/answer3_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/ans3_1"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ans3_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ans3_1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" />

            <CheckBox
                android:id="@+id/answer3_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/ans3_2"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ans3_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ans3_2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" />

            <CheckBox
                android:id="@+id/answer3_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/ans3_3"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/num4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num3"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/soal4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="4."
                android:textColor="@color/black100"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/num4"
                android:textColor="@color/black100"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ans4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/soal4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" />

            <EditText
                android:id="@+id/answer4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:inputType="text" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/num5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/num4"
        android:padding="5dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/soal5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="5."
                android:textColor="@color/black100"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/num5"
                android:textColor="@color/black100"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ans5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/soal5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessLeaf" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/answer5_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans5_1"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/answer5_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans5_2"
                    android:textSize="15sp" />
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
